--- a/CreateModal/style.css
+++ b/CreateModal/style.css
@@ -45,32 +45,25 @@ button:hover {
   background: #d2d2f2;
   color: rgba(17, 17, 17, 0.6);
 }
-.modal-wrap {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.8);
-  transition: 0.3s all ease-in-out;
-}
 .box-modal {
-  background: #fff;
   position: fixed;
-  top: 100px;
+  top: 0;
   left: 50%;
+  z-index: 1050;
   min-width: 500px;
   max-width: 600px;
-  transform: translate(-50%, 0);
+  background: #fff;
+  transition: transform 0.3s ease-out, -webkit-transform 0.3s ease-out;
+  transform: translate(-50%, -100%);
+}
+.modal-header {
+  padding: 15px 20px;
+  border-bottom: 1px solid #dadada;
+  position: relative;
 }
 .modal-title {
-  padding: 15px 20px;
   font-size: 16px;
   font-weight: 600;
-  border-bottom: 1px solid #dadada;
 }
 .modal-body {
   padding: 15px 20px;
@@ -102,4 +95,37 @@ button:hover {
 .clos-icon:hover {
   background: transparent;
   opacity: 0.6;
+}
+
+.fade {
+  opacity: 0;
+  transition: opacity 0.15s linear;
+}
+.fade.show {
+  opacity: 1;
+}
+.show .box-modal {
+  top: 100px;
+  -webkit-transform: translate(0, 0);
+  transform: translate(-50%, 0);
+}
+
+.modal-open {
+  overflow: hidden;
+}
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1040;
+  background-color: #000;
+  opacity: 0;
+  display: none;
+  transition: 0.3s ease-in-out all;
+}
+.modal-backdrop.show {
+  opacity: 0.5;
+  display: block;
 }
